Add flowspec module.

--- a/.gitmodules
+++ b/.gitmodules
@@ -78,3 +78,7 @@
   path = spg
   url = https://github.com/metaborg/spg.git
   branch = develop/nabl2
+[submodule "flowspec"]
+  path = flowspec
+  url = http://github.com/metaborg/flowspec.git
+  branch = develop/nabl2
